// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QCStatementsExtension should return correct JSON structure 1`] = `
Object {
  "Qualified Certificate Statements (1.3.6.1.5.5.7.1.3)": Object {
    "Critical": "NO",
    "Statements": QCStatements [
      Object {
        "Statement ID": "ETSI QCS Compliance (0.4.0.1862.1.1)",
      },
      Object {
        "Statement ID": "ETSI QC Type Web (0.4.0.1862.1.6.3)",
      },
    ],
  },
}
`;

exports[`QCStatementsExtension should return correct JSON structure with multiple statements 1`] = `
Object {
  "Qualified Certificate Statements (1.3.6.1.5.5.7.1.3)": Object {
    "Critical": "NO",
    "Statements": QCStatements [
      Object {
        "Statement ID": "ETSI QCS Compliance (0.4.0.1862.1.1)",
      },
      Object {
        "Retention Period": "15 years",
        "Statement ID": "ETSI QCS Retention Period (0.4.0.1862.1.3)",
      },
      Object {
        "QC Types": "0.4.0.1862.1.6.1",
        "Statement ID": "ETSI QC Type (0.4.0.1862.1.6)",
      },
      Object {
        "PDS Locations": PdsLocations [
          Object {
            "Language": "en",
            "URL": "https://www.firmaprofesional.com/cps/pds_en.pdf",
          },
        ],
        "Statement ID": "ETSI QCS PDS (0.4.0.1862.1.5)",
      },
    ],
  },
}
`;
